# opensuse-distro-aliases

./: COPYING  README.rst  pyproject.toml
.github/workflows/: cache_up_to_date.yml  ci.yml  release.yml
src/opensuse_distro_aliases/: __init__.py
tests/: test_distro_aliases.py
