[tool.poetry]
name = "opensuse-distro-aliases"
version = "0.2.2"
description = "Aliases for active openSUSE releases"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "opensuse_distro_aliases", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# el9 ships requests 2.25, don't bump this
requests = ">=2.25"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.10"
ruff = ">=0.5"
twine = ">=5.1"
types-requests = ">=2.25"
pytest = ">=8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.ruff]
src = ["src"]
target-version = "py39"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
